# rh-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _build_midcap_universe.py  _build_penny_universe.py  _build_smallcap_universe.py  _pattern_scan_micros.py  _run_2022_stress.py  _run_atr_analysis.py  _run_buyback_pead_stress.py  _run_full_stack_backtest.py  _run_margin_backtest.py  _run_mcl_orb_sr_filter.py  _run_mcl_rsi2.py  _run_mes_orb_sr_filter.py  _run_mgc_orb_sr_filter.py  _run_mgc_rsi2.py  _run_mnq_orb_sr_filter.py  _run_per_year_stress.py  _run_sector_cross_strategy.py  _run_stack_backtest.py  _stitch_mes.py  _stitch_micros.py  claude_mcp_config.example.json  mid_cap_universe.txt  penny_stock_universe.txt  pyproject.toml  requirements.txt  rh_config.example.json  small_cap_universe.txt  stock_universe.txt
backtest_data/: 8k_history_4yr.csv  8k_history_midcap_4yr.csv  RESULTS.md  backtest_midcap_4yr.csv  backtest_smallcap_4yr.csv  momentum_signals_4yr.csv
docs/: INSTALL.md  RELEASE.md  STATUS.md  TOOLS.md  TRADE_POSTMORTEM_TEMPLATE.md
rh_mcp/: __init__.py  auth.py  server.py
rh_mcp/analysis/: __init__.py  backtest.py  backtest_combined.py  backtest_smallcap.py  buyback_announcements.py  capitulation_reversal.py  cheap_premium_buyers.py  earnings.py  edgar_client.py  edgar_finbert_classifier.py  edgar_history_builder.py  edgar_history_classifier.py  edgar_keywords.py  failed_breakout.py  float_check.py  float_rotation.py  futures_client.py  futures_history.py  high_breakout.py  historicals.py  iv_crush_drift.py  iv_rank.py  liquidity_guard.py  momentum_12_1.py  momentum_backtest.py  news.py  oi_history.py  options_scan.py  orb_breadth.py  orb_live_tracker.py  orb_mnq.py  orb_trail.py  order_book.py  pead.py  premium_sellers.py  quality_filter.py  rsi2_extremes.py  scan_8k.py  scan_all.py  scan_futures_rsi2.py  (+8 more)
rh_mcp/tools/: __init__.py  account.py  alerts.py  analysis.py  notifications.py  options_trading.py  orders.py  pipeline.py  quotes.py  scanners.py  shorting.py  sizing.py  social.py  trade_log.py
rh_monitor/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_alerts.py  test_quotes_smoke.py  test_sizing.py
