[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rh-mcp"
version = "0.1.0"
description = "Robinhood Model Context Protocol server for Claude"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Horizon-Hawk" }]
keywords = ["mcp", "claude", "robinhood", "trading", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "robin-stocks>=3.0.0",
    "requests>=2.31.0",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
# Optional companion: GUI-based alert injector + ntfy push.
# Windows-only in practice — uses pyautogui/pygetwindow/keyboard to find the
# Claude Code window and paste alerts. Install with: pip install rh-mcp[monitor]
# Run: rh-monitor   (or: python -m rh_monitor)
monitor = [
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.8.2",
    "keyboard>=0.13.5",
    "plyer>=2.1.0",
    "psutil>=5.9.0",
]
# Optional analysis extras — required by rh_mcp.analysis.float_check (yfinance)
# and rh_mcp.analysis.iv_rank (scipy for Black-Scholes IV solver).
analysis = [
    "yfinance>=0.2.40",
    "scipy>=1.10.0",
]
# FinBERT 8-K body classifier — local CPU inference, no API key.
# Required by rh_mcp.analysis.edgar_finbert_classifier and scan_8k(deep_scan=True).
finbert = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.scripts]
rh-mcp = "rh_mcp.server:main"
rh-monitor = "rh_monitor.cli:main"

[project.urls]
Homepage = "https://github.com/Horizon-Hawk/rh-mcp"
Issues = "https://github.com/Horizon-Hawk/rh-mcp/issues"

[tool.setuptools.packages.find]
include = ["rh_mcp*", "rh_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
